src/objects/Branch_Compliance_Visit__c.object
<CustomObject>
    <fields>
        <fullName>ALL_actions_completed_from_last_visit__c</fullName>
        <inlineHelpText>Guidance: Evidence of training / coaching, and if possible, plans completed. 
Non completion issues will be graded into Red (Major), Amber (Intermediate) and Green (Minor) and carry a penalty score of up to 20 marks which will affect the rating.</inlineHelpText>
        <label>ALL actions completed from last visit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_from_last_Compliance_visit__c</fullName>
        <label>Actions from last Compliance visit?</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Applications_Passed__c</fullName>
        <label>Applications Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applications_Sampled__c</fullName>
        <inlineHelpText>If failures exceed 10 %, a rating of Low Risk will not be given 
If failure rate is 10-25%, Medium (Low) Risk is the highest rating achievable 
Failure rate is 26% - 40 %, Medium (High) Risk is the highest rating achievable 
Failure rates of 40%: High</inlineHelpText>
        <label>Applications Sampled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCLs_Branch_Opening_Overall_Score_5__c</fullName>
        <label>BCLs / Branch Opening Overall Score (4)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Visit_Rating__c</fullName>
        <label>Visit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Risk</fullName>
                </value>
                <value>
                    <fullName>Medium Low Risk</fullName>
                </value>
                <value>
                    <fullName>Medium High Risk</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch_Documents__c</referenceTo>
        <relationshipName>Branch_Compliance_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBT_up_to_date__c</fullName>
        <label>CBT up to date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCare_Comments__c</fullName>
        <label>CCare Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments10daysleave__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsCC__c</fullName>
        <inlineHelpText>Guidance: Discuss trends identified /actions arising from Complaints report and FCU contact log</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsFraudcir__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsKYC__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsKYCsampling__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_CBT__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_PDFs__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Guidance: Arrangements for protection of customer data in place and is the branch displaying the required statutory notices?  Clear desk policy, confidential waste, computer screens not facing public area / left locked if unoccupied. See attached listing</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentsdev__c</fullName>
        <inlineHelpText>Guidance: List all remedial action and development points from this visit each with a target date to update Compliance by.</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentsopen_tickets__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentspanic__c</fullName>
        <inlineHelpText>Guidance: Dispensers to be fully stocked with the most recent versions available. Branch Panic Alarm box key removed from unit so it can’t be reset by anyone unless testing the PA’s</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentsphysical__c</fullName>
        <inlineHelpText>Guidance: the relevant logs should be present, completed and filed with supporting information. Have relevant actions required by the last monthly inspection by Br. Ops Mgr been implemented?</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cust_Care_FCU_actions_Overall_Score__c</fullName>
        <inlineHelpText>Branch/Premier/Agency=12, CC=10</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPA_Sinage_in_order__c</fullName>
        <label>DPA / Sinage in order?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline1__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline2__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline3__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCU_Comments__c</fullName>
        <label>FCU Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fraud_Circulars_cascades_up_to_date__c</fullName>
        <label>Fraud Circulars cascades up to date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Calls_Observed__c</fullName>
        <label>Inbound Calls Observed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_1_Staff_Namr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview 1 Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Compliance_Visit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_2_Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview 2 Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Compliance_Visit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Comments__c</fullName>
        <inlineHelpText>Minimum acceptable levels:
•	Less than (70%)  = individual action plan (1 wk deadline)
•	Less than (80%) = individual action plan (2 wk deadline)</inlineHelpText>
        <label>Interview Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KYC_Procedure_Adherence_Score_13__c</fullName>
        <inlineHelpText>Guidance – Has the Branch been applying KYC procedures correctly? Branch staff should be aware of the location of the KYC guidance and be capable of explaining its use. Evidence this via a sample of new applications viewed by Compliance prior to the visit</inlineHelpText>
        <label>KYC Procedure Adherence Score (12)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leaflet_displays_full__c</fullName>
        <label>Leaflet displays full?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observation_Record__c</fullName>
        <inlineHelpText>C/CD/NC</inlineHelpText>
        <label>Observation Record</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Tickets_cleared_and_up_to_date__c</fullName>
        <label>Open Tickets cleared and up to date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Calls_Observed__c</fullName>
        <label>Outbound Calls Observed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Visit_Comments__c</fullName>
        <label>Overall Visit Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDFs_in_order__c</fullName>
        <label>PDFs in order?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panic_Alarm_box_key_Locked_Away__c</fullName>
        <label>Panic Alarm box key Locked Away?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Score1__c</fullName>
        <formula>Total_Score_branch__c  / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Score_Agency__c</fullName>
        <formula>Total_Score_Agency__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage score is based on a maximum of 80%.</inlineHelpText>
        <label>Percentage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Score__c</fullName>
        <inlineHelpText>Branch Scoring Brackets:
•	0 - 69% High Risk
•	70- 77% Medium (High) Risk
•	78 - 84% Medium (Low) Risk
•	85%+ = Low Risk</inlineHelpText>
        <label>Percentage Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_checks_completed_satisfactorily__c</fullName>
        <inlineHelpText>CCTV Recording, Alarm, Physical Checks, etc completed.</inlineHelpText>
        <label>Physical checks completed satisfactorily</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remedial_Action1__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedial_Action2__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedial_Action3__c</fullName>
        <label>Remedial Action</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score10daysleave__c</fullName>
        <inlineHelpText>Guidance: Have all staff booked at least one period of leave for at least 10 successive working days? In accordance with IBB company policy. Examine evidence that leave has been booked.
For branch visit score=2, for CC/Premier/Agency visit score=1</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_15__c</fullName>
        <inlineHelpText>Branch/Agency/CC=30, Premier=25</inlineHelpText>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_16__c</fullName>
        <inlineHelpText>Observe 2 calls each for 4 MOS. Call rated ‘compliant’= 2, ‘compliant with development’ =1, ‘non – compliant’=0.</inlineHelpText>
        <label>Score (16)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_1__c</fullName>
        <inlineHelpText>Guidance: How effectively have Fraud circulars been communicated to staff? Managers should ensure that these have been cascaded. Check file for signatures but not verified by interview. Score of 2 for CC/Agency/Premier and 1 for branch.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_1panickey__c</fullName>
        <label>Score (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_5open_tick__c</fullName>
        <inlineHelpText>Guidance: CASE reports checked – no outstanding complaints for branch action. Random check of non complaint cases should not include any cases which should be treated as complaints.Premier=5, Branch/Agency/CC=3</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Branch_or_Agency__c</fullName>
        <inlineHelpText>Agency/Premier = 3
Branch/CC = 4</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_CBT__c</fullName>
        <inlineHelpText>Guidance: Has all online training been completed within the required timescales? See reports section of online training for required timescales/Refer to Training Dept…</inlineHelpText>
        <label>Score (2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_DPA__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_HPP_Sales_Process__c</fullName>
        <inlineHelpText>Agency = 12, Branch/CC = 2</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score (2)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_agency_branch2__c</fullName>
        <description>CC/Agency/Premier = 2
Branch = 1</description>
        <inlineHelpText>CC/Agency = 2
Branch = 1</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_leaflet__c</fullName>
        <label>Score (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Alarm__c</fullName>
        <description>Security alarm fitted?</description>
        <label>Security Alarm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_s_10_day_leave_booked_in__c</fullName>
        <label>Team&apos;s 10 day leave booked in?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Score_Agency__c</fullName>
        <formula>Score_Branch_or_Agency__c  +  Score_agency_branch2__c +  Score_15__c + Score_CBT__c + Score_5open_tick__c + Score_25__c + Score_5__c + Score_8__c + Score_HPP_Sales_Process__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage Score out of 80%</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_CC__c</fullName>
        <formula>Score_3__c  +  Score_16__c  +  Score_6__c  +  Score_61__c  +  Score_CBT__c  +   Score10daysleave__c  + Score_5open_tick__c  +  Score_1__c  +  Cust_Care_FCU_actions_Overall_Score__c  +  Score_25__c  +  Score_251__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_branch__c</fullName>
        <formula>Cust_Care_FCU_actions_Overall_Score__c  +  BCLs_Branch_Opening_Overall_Score_5__c  +  KYC_Procedure_Adherence_Score_13__c  +  Score_1__c  +  Score_leaflet__c  +  Score_1panickey__c  +  Score_CBT__c  +  Score10daysleave__c  +  Score_25__c  +  Score_251__c  +  Score_5open_tick__c  +  Score_6__c +  Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Was_branch_opening_procedure_adhered_to__c</fullName>
        <label>Was branch opening procedure adhered to?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percentage_Score_CC__c</fullName>
        <formula>Total_Score_CC__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>percentage Score CC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Compliance Visit</label>
    <nameField>
        <label>Compliance Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Visits</pluralLabel>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <description>Agency Visits</description>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Centre</fullName>
        <active>true</active>
        <label>Contact Centre</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premier</fullName>
        <active>true</active>
        <label>Premier</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>